# xpilot-cpp

./: .gitignore  Makefile.in  README.md  configure  configure.ac  dodgers.sh  dodgers2.sh
contrib/: Makefile.in
contrib/TkXpInterface/src/: TkXpInterface
doc/: Makefile.in
doc/man/: Makefile.in
lib/: Makefile.am  Makefile.in
lib/maps/: 13.xp  200.xp  2fort.xp  4-team-1.xp  4-team-2.xp  4teamplan.xp  8.xp  Alrin.xp  Arena.xp  Bali.xp  Big_Bang.xp  Boo.xp  Castle01.xp  Castle02.xp  CellBlock9.xp  Chatroom.xp  Circuit1.xp  ColonyW.xp  Core_Sector.xp  CurlyWorld.xp  Dog-Fighter.xp  DonkeyWoofbark.xp  Fracture.xp  Hi_there.xp  Lion.xp  M2.xp  Makefile.am  Makefile.in  Mario.xp  Newbie-Paradise.xp  Pentagon.Wibble.xp  Pin3.xp  PinTeam.xp  Ricochet.xp  Serpent1.xp  Synapse.xp  TR.xp  Team.Pentagon.Wibble.xp  Town.xp  Tuxhat1.xp  (+313 more)
lib/textures/: Makefile.am  Makefile.in
src/: Makefile.in
src/client/: Makefile.am  Makefile.in  XPilotFrame.cpp  XPilotFrame.h  about.h  blockbitmaps.cpp  blockbitmaps.h  caudio.cpp  caudio.h  client.cpp  client.h  clientcommand.cpp  clientcommand.h  clientrank.cpp  clientrank.h  configure.h  connectparam.h  datagram.cpp  datagram.h  dbuff.h  debugaudio.cpp  default.cpp  event.cpp  gfx2d.cpp  gfx2d.h  gfx3d.cpp  gfx3d.h  guimap.cpp  guimap.h  guiobjects.cpp  guiobjects.h  icon.h  join.cpp  mapdata.cpp  messages.cpp  messages.h  meta.cpp  meta.h  netclient.cpp  netclient.h  (+28 more)
src/client/items/: Makefile.am  Makefile.in
src/client/sdl/: DT_drawtext.cpp  DT_drawtext.h  Makefile.am  Makefile.in  SDL_console.cpp  SDL_console.h  SDL_gfxPrimitives.cpp  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  asteroid_data.h  console.cpp  console.h  gameloop.cpp  gameloop_x.cpp  glwidgets.cpp  glwidgets.h  images.cpp  images.h  main.cpp  radar.cpp  radar.h  scrap.cpp  scrap.h  sdlevent.cpp  sdlgui.cpp  sdlinit.cpp  sdlinit.h  sdlkeys.cpp  sdlkeys.h  sdlmeta.cpp  sdlmeta.h  sdlpaint.cpp  sdlpaint.h  sdlwindow.cpp  sdlwindow.h  text.cpp  text.h  todo.cpp  win32hacks.cpp  xpclient_sdl.h
src/client/vulkan/: main.cpp  vulkan.txt
src/client/x11/: Makefile.am  Makefile.in  about.cpp  bitmaps.cpp  bitmaps.h  blockbitmaps.cpp  client.cpp  client.h  colors.cpp  colors.h  configure.cpp  configure.h  datagram.cpp  dbuff.cpp  dbuff.h  default.cpp  default.h  guimap.cpp  guiobjects.cpp  join.cpp  keydefs.h  netclient.cpp  paint.cpp  paint.h  paintdata.cpp  paintdata.h  painthud.cpp  paintmap.cpp  paintobjects.cpp  paintradar.cpp  record.cpp  record.h  sim.cpp  talk.cpp  talkmacros.cpp  textinterface.cpp  welcome.cpp  widget.cpp  widget.h  xclient.cpp  (+16 more)
src/common/: Makefile.am  Makefile.in  astershape.h  audio.h  bit.h  checknames.cpp  checknames.h  click.h  commonmacros.h  commonproto.h  config.cpp  const.h  draw.h  error.cpp  error.h  item.h  keys.h  list.cpp  list.h  math.cpp  metaserver.h  net.cpp  net.h  pack.h  packet.h  portability.cpp  portability.h  randommt.cpp  randommt.h  recordfile.cpp  recordfile.h  recordfmt.h  rules.h  setup.h  shipshape.cpp  shipshape.h  socklib.cpp  socklib.h  strcasecmp.cpp  strdup.cpp  (+16 more)
src/mapedit/: COPYRIGHT  Makefile.am  Makefile.in  README  T_Form.cpp  T_Form.h  T_Handler.cpp  T_Handler.h  T_Popup.cpp  T_Popup.h  T_Toolkit.cpp  T_Toolkit.h  T_proto.h  default_colors.h  defaults.h  events.cpp  events.h  expose.cpp  expose.h  file.cpp  file.h  forms.cpp  forms.h  grow.cpp  grow.h  help.cpp  help.h  main.cpp  main.h  map.h  proto.h  round.cpp  round.h  tools.cpp  tools.h
src/replay/: Makefile.am  Makefile.in  buttons.cpp  buttons.h  xpilot-replay.cpp  xpilot-replay.h
src/replay/tools/: Makefile.in
src/server/: Makefile.am  Makefile.in  alliance.cpp  asteroid.cpp  asteroid.h  cannon.cpp  cannon.h  cell.cpp  click.h  cmdline.cpp  collision.cpp  command.cpp  connection.h  contact.cpp  defaults.h  event.cpp  fileparser.cpp  frame.cpp  global.h  gravity.cpp  id.cpp  item.cpp  laser.cpp  map.cpp  map.h  metaserver.cpp  metaserver.h  modifiers.cpp  modifiers.h  netserver.cpp  netserver.h  object.cpp  object.h  objpos.cpp  objpos.h  option.cpp  option.h  parser.cpp  play.cpp  player.cpp  (+48 more)
