AC_INIT([XPilotCPP], [4.5.5], [https://github.com/ksoderbl], [xpilot-cpp], [https://github.com/ksoderbl/xpilot-cpp])
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_FILES([
	Makefile
	contrib/Makefile
	doc/Makefile
	doc/man/Makefile
	lib/Makefile
	src/Makefile
	src/common/Makefile
	src/client/Makefile
	src/server/Makefile
	src/replay/Makefile
	src/mapedit/Makefile
])
AC_OUTPUT

