xpilotmapdir = $(pkgdatadir)/maps
xpilotmap_DATA = \
    blood-music2.xp CAMD.xp cloudscape.xp default.xp dodgers4.xp doggy.xp fireball.xp fuzz2.xp fuzz.xp globe.xp grandprix.xp newdarkhell2.xp newdarkhell.xp pad.xp pit.xp planetx.xp teamball.xp tourmination.xp tournament.xp war.xp

EXTRA_DIST = $(xpilotmap_DATA)
