AM_CPPFLAGS = -I$(top_srcdir)/src/common

noinst_LIBRARIES = libxpclient.a

libxpclient_a_SOURCES = \
    about.h \
    caudio.cpp \
    caudio.h \
    client.cpp \
    client.h \
    connectparam.h \
    datagram.cpp \
    datagram.h \
    debugaudio.cpp \
    gfx2d.cpp \
    gfx2d.h \
    guimap.h \
    guiobjects.h \
    icon.h \
    netclient.cpp \
    netclient.h \
    paint.cpp \
    paint.h \
    paintradar.h \
    protoclient.h \
    query.cpp \
    talk.h \
    xpmread.h

SUBDIRS = . items x11
