AM_CPPFLAGS = -DCONF_DATADIR=\"$(pkgdatadir)/\" -I$(top_srcdir)/src/common

noinst_LIBRARIES = libxpclient.a

libxpclient_a_SOURCES = \
    about.h \
    caudio.cpp \
    caudio.h \
    client.cpp \
    client.h \
    configure.h \
    connectparam.h \
    datagram.cpp \
    datagram.h \
    debugaudio.cpp \
    default.cpp \
    event.cpp \
    gfx2d.cpp \
    gfx2d.h \
    guimap.h \
    guiobjects.h \
    icon.h \
    messages.h \
    messages.cpp \
    netclient.cpp \
    netclient.h \
    option.cpp \
    option.h \
    paint.cpp \
    paint.h \
    paintmap.cpp \
    paintobjects.cpp \
    paintradar.h \
    protoclient.h \
    query.cpp \
    talk.h \
    talkmacros.cpp \
    textinterface.cpp

SUBDIRS = . items x11
