AM_CPPFLAGS = -DCONF_DATADIR=\"$(pkgdatadir)/\" -I$(top_srcdir)/src/common

noinst_LIBRARIES = libxpclient.a

libxpclient_a_SOURCES = \
    about.h \
    caudio.cpp \
    caudio.h \
    client.cpp \
    client.h \
    connectparam.h \
    datagram.cpp \
    datagram.h \
    debugaudio.cpp \
    gfx2d.cpp \
    gfx2d.h \
    guimap.h \
    guiobjects.h \
    icon.h \
    messages.h \
    messages.cpp \
    netclient.cpp \
    netclient.h \
    paint.cpp \
    paint.h \
    paintradar.h \
    protoclient.h \
    query.cpp \
    talk.h \
    talkmacros.cpp \
    textinterface.cpp

SUBDIRS = . items x11
