noinst_LIBRARIES = libxpcommon.a

libxpcommon_a_SOURCES = \
    astershape.h \
    audio.h \
    bit.h \
    checknames.cpp \
    checknames.h \
    commonproto.h \
    const.h \
    draw.h \
    error.cpp \
    error.h \
    item.h \
    keys.h \
    list.cpp \
    list.h \
    math.cpp \
    net.cpp \
    net.h \
    packet.h \
    pack.h \
    portability.cpp \
    portability.h \
    randommt.cpp \
    recordfmt.h \
    rules.h \
    setup.h \
    shipshape.cpp \
    socklib.cpp \
    socklib.h \
    strcasecmp.cpp \
    strdup.cpp \
    strlcpy.cpp \
    types.h \
    version.h \
    wreckshape.h \
    xpconfig.cpp \
    xpconfig.h \
    xpmemory.cpp
