noinst_LIBRARIES = libxpcommon.a

libxpcommon_a_SOURCES = \
    astershape.h \
    audio.h \
    bit.h \
    checknames.cpp \
    checknames.h \
    commonproto.h \
    const.h \
    draw.h \
    item.h \
    keys.h \
    list.cpp \
    list.h \
    net.cpp \
    net.h \
    packet.h \
    pack.h \
    portability.cpp \
    portability.h \
    randommt.cpp \
    randommt.h \
    recordfmt.h \
    rules.h \
    setup.h \
    shipshape.cpp \
    socklib.cpp \
    socklib.h \
    strcasecmp.cpp \
    strdup.cpp \
    strdup.h \
    strlcpy.cpp \
    strlcpy.h \
    types.h \
    version.h \
    wreckshape.h \
    xpconfig.cpp \
    xpconfig.h \
    xperror.cpp \
    xperror.h \
    xpmath.cpp \
    xpmath.h \
    xpmemory.cpp \
    xpmemory.h
