AM_CPPFLAGS = -DCONF_DATADIR=\"$(pkgdatadir)/\"
noinst_LIBRARIES = libxpcommon.a
libxpcommon_a_SOURCES = \
    recordfile.cpp \
    recordfile.h \
    astershape.h \
    audio.h \
    bit.h \
    checknames.cpp \
    checknames.h \
    commonmacros.h \
    const.h \
    draw.h \
    item.h \
    keys.h \
    list.cpp \
    list.h \
    net.cpp \
    net.h \
    packet.h \
    pack.h \
    portability.cpp \
    portability.h \
    randommt.cpp \
    randommt.h \
    recordfmt.h \
    rules.h \
    setup.h \
    shipshape.cpp \
    shipshape.h \
    socklib.cpp \
    socklib.h \
    strcasecmp.cpp \
    strdup.cpp \
    strdup.h \
    strlcpy.cpp \
    strlcpy.h \
    types.h \
    version.h \
    wreckshape.h \
    xpconfig.cpp \
    xpconfig.h \
    xperror.cpp \
    xperror.h \
    xpmath.cpp \
    xpmath.h \
    xpmemory.cpp \
    xpmemory.h
