AM_CPPFLAGS = -I$(top_srcdir)/src/common

bin_PROGRAMS = xpilot-cpp-mapedit

xpilot_cpp_mapedit_SOURCES = \
    events.cpp \
    expose.cpp \
    file.cpp \
    forms.cpp \
    grow.cpp \
    help.cpp \
    main.cpp \
    round.cpp \
    T_Form.cpp \
    T_Handler.cpp \
    tools.cpp \
    T_Popup.cpp \
    T_Toolkit.cpp

xpilot_cpp_mapedit_LDADD = -lX11 -lm ../common/libxpcommon.a

