AM_CPPFLAGS = -I$(top_srcdir)/src/common

bin_PROGRAMS = xpilot-cpp-mapedit

xpilot_cpp_mapedit_SOURCES = \
    default_colors.h \
    defaults.h \
    events.cpp \
    events.h \
    expose.cpp \
    expose.h \
    file.cpp \
    file.h \
    forms.cpp \
    forms.h \
    grow.cpp \
    grow.h \
    help.cpp \
    help.h \
    main.cpp \
    main.h \
    map.h \
    proto.h \
    round.cpp \
    round.h \
    T_Form.cpp \
    T_Form.h \
    T_Handler.cpp \
    T_Handler.h \
    tools.cpp \
    tools.h \
    T_Popup.cpp \
    T_Popup.h \
    T_proto.h \
    T_Toolkit.cpp \
    T_Toolkit.h

xpilot_cpp_mapedit_LDADD = -lX11 -lm ../common/libxpcommon.a

