AM_CPPFLAGS = -I$(top_srcdir)/src/common

bin_PROGRAMS = xpilot-cpp-server

xpilot_cpp_server_SOURCES = \
    alliance.cpp \
    asteroid.cpp \
    cannon.cpp \
    cell.cpp \
    cmdline.cpp \
    collision.cpp \
    command.cpp \
    contact.cpp \
    event.cpp \
    fileparser.cpp \
    frame.cpp \
    id.cpp \
    item.cpp \
    laser.cpp \
    map.cpp \
    metaserver.cpp \
    netserver.cpp \
    object.cpp \
    objpos.cpp \
    option.cpp \
    parser.cpp \
    play.cpp \
    player.cpp \
    robot.cpp \
    robotdef.cpp \
    rules.cpp \
    saudio.cpp \
    sched.cpp \
    score.cpp \
    server.cpp \
    ship.cpp \
    shot.cpp \
    showtime.cpp \
    stratbot.cpp \
    tuner.cpp \
    update.cpp \
    walls.cpp \
    wildmap.cpp

xpilot_cpp_server_LDADD = -lm ../common/libxpcommon.a
